# bloc-function

./: .gitignore  LICENSE  README.md  go.mod  go.sum  pyproject.toml
bloc_function_go/: main.go
bloc_function_go/function/generate/time_about/: func.go  func_test.go  options.go
bloc_function_go/function/intercept/str_intercept/: func.go  func_test.go  options.go
