[tool.poetry]
name = "bloc_function"
version = "0.1.0"
description = "official preset bloc functions"
authors = ["pillipanda"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bloc-client = "^0.2.7"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
